:recycle: adds contraints and validetion to models.

--- a/test/fixtures/ratings.yml
+++ b/test/fixtures/ratings.yml
@@ -3,9 +3,9 @@
 one:
   grade: 1
   comment: MyText
-  class: one
+  course: one
 
 two:
   grade: 1
   comment: MyText
-  class: two
+  course: two
