:bug: Fix bug with wrong teacher_course reference

--- a/test/fixtures/ratings.yml
+++ b/test/fixtures/ratings.yml
@@ -3,9 +3,9 @@
 one:
   grade: 1
   comment: MyText
-  course: one
+  teacher_course: one
 
 two:
   grade: 1
   comment: MyText
-  course: two
+  teacher_course: two
